refactor: changed styles

--- a/src/views/ChatBot.module.scss
+++ b/src/views/ChatBot.module.scss
@@ -1,6 +1,7 @@
-.chatBot {
+.chat-bot {
   width: 500px;
   border-radius: 35px;
   background: lightgray;
   overflow: hidden;
+  box-shadow: 4px 4px 10px 5px rgba(25, 42, 62, 0.4);
 }
