--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,11 +8,11 @@
   display: flex;
   align-items: center;
   position: relative;
+  border-bottom: 1px solid #fff;
 
   &__caption {
     padding-left: 10px;
     font-weight: bold;
-    font-size: 18px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -22,9 +22,9 @@
     transition-duration: .5s;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.2);
     }
-    
+
     &__wrapper {
       position: absolute !important;
       top: 4px;
