--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -21,14 +21,14 @@
   &__update {
     transition-duration: .5s;
 
-    &:hover {
-      transform: scale(1.2);
-    }
-
     &__wrapper {
       position: absolute !important;
       top: 4px;
       right: 8px;
+
+      &:hover .header__update {
+        transform: scale(1.2);
+      }
     }
   }
 }
