--- a/src/views/ChatBot.module.scss
+++ b/src/views/ChatBot.module.scss
@@ -1,7 +1,7 @@
 .chat-bot {
   width: 500px;
   border-radius: 20px;
-  background: lightgray;
+  background: lighten(lightgray, 3%);
   overflow: hidden;
   box-shadow: 4px 4px 10px 5px rgba(25, 42, 62, 0.4);
 }
