--- a/src/components/Message/Message.module.scss
+++ b/src/components/Message/Message.module.scss
@@ -6,7 +6,7 @@
   max-width: 200px;
   width: fit-content;
   padding: 10px;
-  background: darken($base-color, 7%);;
+  background: darken($base-color, 7%);
   word-wrap: break-word;
   border-radius: 10px;
 
